--- a/Source/Blazorise.Material/wwwroot/blazorise.material.css
+++ b/Source/Blazorise.Material/wwwroot/blazorise.material.css
@@ -470,6 +470,7 @@ body :is(:hover, :focus)::-webkit-scrollbar-thumb {
 }
 
 .mui-accordion-item:has(+ .mui-accordion-item.mui-accordion-item-active) {
+  margin-block-end: 0.5rem;
   border-end-start-radius: var(--mui-accordion-radius);
   border-end-end-radius: var(--mui-accordion-radius);
   border-bottom-left-radius: var(--mui-accordion-radius);
